<!--
  ~ PROJECT LICENSE
  ~
  ~ This project was submitted by Shashank Varanasi as part of the Nanodegree At Udacity.
  ~
  ~ As part of Udacity Honor code, your submissions must be your own work, hence
  ~ submitting this project as yours will cause you to break the Udacity Honor Code
  ~ and the suspension of your account.
  ~
  ~ Me, the author of the project, allow you to check the code as a reference, but if
  ~ you submit it, it's your own responsibility if you get expelled.
  ~
  ~ Copyright (c) 2020 Shashank Varanasi
  ~
  ~ Besides the above notice, the following license applies and this license notice
  ~ must be included in all works derived from this project.
  ~
  ~ MIT License
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NON INFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout style="@style/linearLayout">


            <TextView
                style="@style/textView"
                android:text="@string/q1" />

            <RadioGroup
                android:id="@+id/rg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/CorrectAnswerQ1"
                    style="@style/radioButton"
                    android:text="@string/q1_o1"
                    android:textSize="14sp" />

                <RadioButton

                    style="@style/radioButton"
                    android:text="@string/q1_o2"
                    android:textSize="14sp" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q1_o3"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/linearLayout">

            <TextView

                style="@style/textView"
                android:text="@string/q2" />

            <RadioGroup
                android:id="@+id/rg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q2_o1"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/CorrectAnswerQ2"
                    style="@style/radioButton"
                    android:text="@string/q2_o2"
                    android:textSize="14sp" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q2_o3"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout style="@style/linearLayout">

            <TextView

                style="@style/textView"
                android:text="@string/q3" />

            <RadioGroup
                android:id="@+id/rg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q3_o1"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/CorrectAnswerQ3"
                    style="@style/radioButton"
                    android:text="@string/q3_o2"
                    android:textSize="14sp" />

                <RadioButton

                    style="@style/radioButton"
                    android:text="@string/q3_o3"

                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/linearLayout">

            <TextView
                style="@style/textView"
                android:text="@string/q4" />

            <RadioGroup
                android:id="@+id/rg4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton

                    style="@style/radioButton"
                    android:text="@string/q4_o1"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/CorrectAnswerQ4"
                    style="@style/radioButton"
                    android:text="@string/q4_o2"
                    android:textSize="14sp" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q4_o3"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/linearLayout">

            <TextView
                style="@style/textView"
                android:text="@string/q5" />

            <CheckBox
                android:id="@+id/CorrectAnswerQ5_o1"
                style="@style/checkBox"
                android:text="@string/q5_o1"
               />

            <CheckBox
                android:id="@+id/CorrectAnswerQ5_o2"
                style="@style/checkBox"
                android:text="@string/q5_o2"
                />

            <CheckBox
                android:id="@+id/q5_o3"
                style="@style/checkBox"
                android:text="@string/q5_o3"
                />

        </LinearLayout>

        <LinearLayout style="@style/linearLayout">

            <TextView
                style="@style/textView"
                android:text="@string/q6" />

            <EditText
                android:id="@+id/CorrectAnswerQ6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/sampleText"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayout">

            <TextView

                style="@style/textView"
                android:text="@string/q7" />

            <RadioGroup
                android:id="@+id/rg7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q7_o1"

                    android:textSize="14sp" />

                <RadioButton
                    style="@style/radioButton"
                    android:text="@string/q7_o2"

                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/CorrectAnswerQ7"
                    style="@style/radioButton"
                    android:text="@string/q7_o3"
                    android:textSize="14sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:onClick="submit"
                android:text="@string/ButtonSubmit"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>